added the docker \w nginx reverse proxy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,22 @@ services:
   web:
     build:
       context: ./
+    networks:
+      my-network:
+        aliases:
+          - web-app
+    expose:
+      - "5000"
+  nginx:
+    restart: always
+    build:
+      context: ./nginx
+    networks:
+      - my-network
+    depends_on:
+      - web
     ports:
-      - "5000:5000"
+      - "80:80"
+
+networks:
+    my-network:
