added the minify for all requestsa along with updated requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,22 +13,28 @@ Flask-Bcrypt==1.0.1
 Flask-Limiter==2.4.5.1
 Flask-Login==0.6.0
 Flask-Mail==0.9.1
+Flask-Minify==0.39
 Flask-SeaSurf==1.1.1
 Flask-SQLAlchemy==2.5.1
 flask-talisman==1.0.0
 Flask-WTF==1.0.1
 greenlet==1.1.2
+htmlmin==0.1.12
 idna==3.3
 is-safe-url==1.0
 itsdangerous==2.1.2
 Jinja2==3.1.1
+jsmin==3.0.1
+lesscpy==0.15.0
 limits==2.6.1
 MarkupSafe==2.1.1
 packaging==21.3
+ply==3.11
 pycparser==2.21
 Pygments==2.12.0
 PyJWT==2.3.0
 pyparsing==3.0.8
+rcssmin==1.1.0
 rich==12.3.0
 six==1.16.0
 SQLAlchemy==1.4.36
@@ -37,3 +43,4 @@ validate-email-address==1
 Werkzeug==2.1.1
 wrapt==1.14.0
 WTForms==3.0.1
+xxhash==3.0.0
