--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,9 +26,6 @@ jobs:
           --username=${HEROKU_EMAIL} \
           registry.heroku.com \
           --password-stdin
-        docker build \
-          --file ${DOCKERFILE_NAME} \
-          ${DOCKER_OPTIONS} \
-          --tag registry.heroku.com/${HEROKU_APP_NAME}/web .
+        docker-compose up -d
         heroku container:push web --app ${HEROKU_APP_NAME}
         heroku container:release web --app ${HEROKU_APP_NAME}
