--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 
 services:
   web:
+    image: registry.heroku.com/testapp00083772/web
     build:
       context: ./
     networks:
@@ -11,7 +12,7 @@ services:
     expose:
       - "5000"
   nginx:
-    image: registry.heroku.com/testapp00083772/web
+    image: registry.heroku.com/testapp00083772/nginx
     restart: always
     build:
       context: ./nginx
