--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,8 +26,9 @@ jobs:
           --username=${HEROKU_EMAIL} \
           registry.heroku.com \
           --password-stdin
-        docker-compose up -d
+        docker build \
+          --file ${DOCKERFILE_NAME} \
+          ${DOCKER_OPTIONS} \
+          --tag registry.heroku.com/${HEROKU_APP_NAME}/web .
         heroku container:push web --app ${HEROKU_APP_NAME}
         heroku container:release web --app ${HEROKU_APP_NAME}
-        heroku container:push nginx --app ${HEROKU_APP_NAME}
-        heroku container:release nginx --app ${HEROKU_APP_NAME}
