--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,34 +1,18 @@
-name: Docker Image CI
+name: Deploy
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Build and push Docker to Heroku
-      env:
-        HEROKU_APP_NAME: testapp00083772
-        DOCKERFILE_DIRECTORY: "."
-        HEROKU_EMAIL: ravi01prasad@gmail.com
-        HEROKU_API_KEY: 6c636e57-426c-4db5-99c4-d18f3f2b1706
-        DOCKERFILE_NAME: "Dockerfile"
-        DOCKER_OPTIONS: "--no-cache"
-      run: |
-        cd ${DOCKERFILE_DIRECTORY}
-        echo ${HEROKU_API_KEY} | docker login \
-          --username=${HEROKU_EMAIL} \
-          registry.heroku.com \
-          --password-stdin
-        docker build \
-          --file ${DOCKERFILE_NAME} \
-          ${DOCKER_OPTIONS} \
-          --tag registry.heroku.com/${HEROKU_APP_NAME}/web .
-        heroku container:push web --app ${HEROKU_APP_NAME}
-        heroku container:release web --app ${HEROKU_APP_NAME}
+      - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+        with:
+          heroku_api_key: 6c636e57-426c-4db5-99c4-d18f3f2b1706
+          heroku_app_name: "testapp00083772"
+          heroku_email: "ravi01prasad@gmail.com"
+          usedocker: true
