--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,6 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
+          file: ./heroku_docker/Dockerfile
           heroku_api_key: 6c636e57-426c-4db5-99c4-d18f3f2b1706
           heroku_app_name: "testapp00083772"
           heroku_email: "ravi01prasad@gmail.com"
