--- a/uwsgi_config.ini
+++ b/uwsgi_config.ini
@@ -1,11 +1,7 @@
 [uwsgi]
+http-socket = :$(PORT)
 module = run:app
-
 master = true
-processes = 5
-
-socket = myproject.sock
-chmod-socket = 660
-vacuum = true
-
+processes = 4
 die-on-term = true
+memory-report = true
