added the socket

--- a/uwsgi_config.ini
+++ b/uwsgi_config.ini
@@ -1,7 +1,8 @@
 [uwsgi]
-http-socket = :$(PORT)
 module = run:app
 master = true
-processes = 4
+processes = 5
+socket = myproject.sock
+chmod-socket = 660
+vacuum = true
 die-on-term = true
-memory-report = true
