--- a/uwsgi_config.ini
+++ b/uwsgi_config.ini
@@ -1,8 +1,7 @@
 [uwsgi]
 module = run:app
+http-socket = :$(PORT)
 master = true
-processes = 5
-socket = myproject.sock
-chmod-socket = 660
-vacuum = true
+processes = 4
 die-on-term = true
+memory-report = true
