--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Deprecated==1.2.13
 dnspython==2.2.1
 email-validator==1.2.0
 Flask==2.1.1
+Flask-Assets==2.0
 Flask-Bcrypt==1.0.1
 Flask-Limiter==2.4.5.1
 Flask-Login==0.6.0
@@ -36,12 +37,14 @@ pycparser==2.21
 Pygments==2.12.0
 PyJWT==2.3.0
 pyparsing==3.0.8
+pyScss==1.4.0
 rcssmin==1.1.0
 rich==12.3.0
 six==1.16.0
 SQLAlchemy==1.4.36
 typing_extensions==4.2.0
 validate-email-address==1
+webassets==2.0
 Werkzeug==2.1.1
 wrapt==1.14.0
 WTForms==3.0.1
